تحديث التصميم ليصبح مثل VS Code مع تلوين الكود

--- a/web/index.html
+++ b/web/index.html
@@ -85,15 +85,33 @@
             </div>
 
             <!-- Inspector -->
+            <div class="full-file-view">
+                <div class="full-file-header">
+                    <span>Complete File View</span>
+                    <button class="ghost-btn" id="copyFullFileBtn" title="Copy to clipboard">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none">
+                            <rect x="9" y="9" width="13" height="13" rx="2" ry="2" stroke="currentColor" stroke-width="2" fill="none"/>
+                            <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" stroke="currentColor" stroke-width="2" fill="none"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="full-file-content" id="fullFileContent">
+                    <div class="no-data">Select a tab to view complete file</div>
+                </div>
+            </div>
+
+            <!-- Inspector -->
             <div class="inspector">
                 <div class="section-header">Details</div>
                 <div class="details" id="details">
                     <div class="no-data">No data selected</div>
                 </div>
                 
-                <div class="section-header">Items Helpers</div>
+                <div class="section-header">Helpers</div>
                 <div class="helpers">
                     <button class="helper-btn" id="fillTemplateBtn">Fill full item template</button>
+                    <button class="helper-btn" id="formatCodeBtn">Format Code</button>
+                    <button class="helper-btn" id="validateCodeBtn">Validate Syntax</button>
                 </div>
             </div>
         </div>
